--- a/template_test.py.tmpl
+++ b/template_test.py.tmpl
@@ -45,16 +45,13 @@ class TestMain(TestCase):
                    autospec=True) as mock_cl:
             with patch("assess_TEMPLATE.BootstrapManager.booted_context",
                        autospec=True) as mock_bc:
-                with patch("jujupy.SimpleEnvironment.from_config",
-                           return_value=env) as mock_e:
-                    with patch("jujupy.EnvJujuClient.by_version",
-                               return_value=client) as mock_c:
-                        with patch("assess_TEMPLATE.assess_TEMPLATE",
-                                   autospec=True) as mock_assess:
-                            main(argv)
+                with patch('deploy_stack.client_from_config',
+                           return_value=client) as mock_c:
+                    with patch("assess_TEMPLATE.assess_TEMPLATE",
+                               autospec=True) as mock_assess:
+                        main(argv)
         mock_cl.assert_called_once_with(logging.DEBUG)
-        mock_e.assert_called_once_with("an-env")
-        mock_c.assert_called_once_with(env, "/bin/juju", debug=False)
+        mock_c.assert_called_once_with('an-env', "/bin/juju", debug=False)
         self.assertEqual(mock_bc.call_count, 1)
         mock_assess.assert_called_once_with(client)
 
@@ -69,8 +66,8 @@ class TestAssess(TestCase):
         fake_client = Mock(wraps=fake_juju_client())
         fake_client.bootstrap()
         assess_TEMPLATE(fake_client)
-        fake_client.juju.assert_called_once_with(
-            'deploy', ('local:trusty/my-charm',))
+        fake_client.deploy.assert_called_once_with(
+            'local:trusty/my-charm')
         fake_client.wait_for_started.assert_called_once_with()
         self.assertEqual(
             1, fake_client.get_status().get_service_unit_count('my-charm'))
